--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -5,7 +5,7 @@
 /* HEADER DA PÁGINA HOME */
 .headerHome{
     width: 100%;
-    height: 89vh;
+    height: 42.5rem;
     background: url(/public/retro-film.png) #000000aa;
     background-size: cover;
     background-position: 50% 50%;
