--- a/src/styles/stylesComponents/DelRegister.css
+++ b/src/styles/stylesComponents/DelRegister.css
@@ -7,6 +7,7 @@
     gap: 1rem;
     font-family: var(--Tsukimi);
     font-weight: bold;
+    text-align: center;
 }
 .delRegister img{
     width: 150px;
