--- a/src/styles/PerfilFilme.css
+++ b/src/styles/PerfilFilme.css
@@ -120,7 +120,7 @@
 }
 
 .paragraphComment{
-    padding: 1rem 10rem 1rem 10rem;
+    padding: 0 10rem 1rem 10rem;
     background: #0f1a20cf;
 }
 .paragraphComment h3{
